# cli-horizons-manager

./: .gitignore  README.md  pyproject.toml
management/horizons/: README.md
management/horizons/H01_External_App_Boundary_And_Packaging/: H_00_Horizon_Brief.md  H_01_Baseline.md  H_02_Target_Model.md  H_03_Workstreams.md  H_04_Governance_And_Safety_Boundaries.md  README.md  V_00_Validation_Plan.md  V_01_Risk_Register.md  V_02_Acceptance_Matrix.md  V_03_Implementation_Evidence.md
management/horizons/H02_Config_Backed_Corpus_Registry/: H_00_Horizon_Brief.md  H_01_Baseline.md  H_02_Target_Model.md  H_03_Workstreams.md  H_04_Governance_And_Safety_Boundaries.md  README.md  V_00_Validation_Plan.md  V_01_Risk_Register.md  V_02_Acceptance_Matrix.md  V_03_Implementation_Evidence.md
management/horizons/H03_Corpus_Registry_CLI_Commands/: H_00_Horizon_Brief.md  (+9 more)
src/horizon_manager/: __init__.py  cli.py  conflicts.py  corpus.py  dag_render.py  doctor.py  events.py  history.py  hooks.py  interactive.py  land.py  locks.py  mission_control.py  model.py  next.py  parser.py  preflight.py  render.py  server.py  watch.py
tests/: README.md  test_horizon_cli.py  test_horizon_conflicts.py  test_horizon_corpus.py  test_horizon_dag_render.py  test_horizon_doctor.py  test_horizon_events.py  test_horizon_history.py  test_horizon_hooks.py  test_horizon_interactive.py  test_horizon_land.py  test_horizon_locks.py  test_horizon_mission_control.py  test_horizon_model.py  test_horizon_next.py  test_horizon_preflight.py  test_horizon_render.py  test_horizon_server.py  test_horizon_watch.py
(+170 files in other folders)
