[project]
name = "geoforge-horizon-manager"
version = "0.1.0"
description = "External horizon management application for GeoForge management subprojects."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
horizon-manager = "horizon_manager.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
